--- a/front/app/stylesheets/core/feeds.scss
+++ b/front/app/stylesheets/core/feeds.scss
@@ -237,7 +237,7 @@
 /**
  * Owner block
  */
-.owner-block{
+.m-owner-block{
   padding:$minds-padding * 2;
   display:flex;
 
